always reset the filemodel when the tree changes

otherwise we might be missing changes deeper inside the tree (i.e.
changes other than the root node)

BUG: 492155


(cherry picked from commit 45a86c11d28120befd49b7eaaec5991dce3cf743)

0b504bc0 always reset the filemodel when the tree changes
4bb45bf8 Apply 1 suggestion(s) to 1 file(s)

Co-authored-by: Harald Sitter <sitter@kde.org>